# FinSandbox_CLI

./: .gitignore  CMakeLists.txt  Readme.md  build_project.sh
.github/workflows/: c-cpp.yml
include/: MarketData.h  Portfolio.h  PriceRecord.h  Simulator.h  TradeHistory.h  TradeRecord.h
src/: MarketData.cpp  Portfolio.cpp  Simulator.cpp  TradeHistory.cpp  main.cpp
